--- a/aicolearning/modelos_de_alumnos/templates/modelos_de_alumnos/importar_modelo.html
+++ b/aicolearning/modelos_de_alumnos/templates/modelos_de_alumnos/importar_modelo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>GroupConf Form</title>
+    <title>Importar Modelo</title>
     <!-- Incluir los estilos de Bootstrap -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
 </head>
