Vista de gestión de alumnos

--- a/aicolearning/trabajo_colaborativo/templates/trabajo_colaborativo/index.html
+++ b/aicolearning/trabajo_colaborativo/templates/trabajo_colaborativo/index.html
@@ -39,7 +39,7 @@
         <p class="card-text">Gestión de alumnos</p>
       </div>
       <div class="card-footer">
-        <a href="#" class="card-link">Ver</a>
+        <a href="/centro_de_estudios/" class="card-link">Ver</a>
       </div>
     </div>
     <div class="card" style="width: 18rem;">
@@ -59,6 +59,6 @@
 
 {% block pie_pagina %}
 
-<span class="text-body-secondary">AICoLearning - Francisco Tejeira - TFG Grado en Ingeniería en Informática UNIR</span>
+
 
 {% endblock %}
