--- a/aicolearning/trabajo_colaborativo/templates/trabajo_colaborativo/index_generic.html
+++ b/aicolearning/trabajo_colaborativo/templates/trabajo_colaborativo/index_generic.html
@@ -21,7 +21,7 @@
       <div class="col-2">
         <nav class="navbar bg-dark border-bottom border-bottom-dark" data-bs-theme="dark">
           <div class="container-fluid">
-            <a class="navbar-brand" href="">
+            <a class="navbar-brand" href="/trabajo_colaborativo">
               <div class="text-center">
                 <img src="{% static '/img/AICoLearningLogo.png' %}"   class="text-center" width="60"/>
               </div>
@@ -30,8 +30,8 @@
             {% block sidebar %}
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-                  <a class="nav-link" href="#">Alumnos</a>
+                  <a class="nav-link active" aria-current="page" href="/trabajo_colaborativo">Inicio</a>
+                  <a class="nav-link" href="/centro_de_estudios/">Alumnos</a>
                   <a class="nav-link" href="#">Modelos</a>
                   <a class="nav-link" href="#">Grupos</a>
                   <a class="nav-link" href="#">Encuestas</a>
@@ -53,6 +53,7 @@
   <footer class="footer mt-auto py-3 bg-body-tertiary ">
     <div class="container">
       {% block pie_pagina %}{% endblock %}
+      <span class="text-body-secondary">AICoLearning - Francisco Tejeira - TFG Grado en Ingeniería en Informática UNIR</span>
     </div>
   </footer>
 </body>
