--- a/aicolearning/trabajo_colaborativo/templates/trabajo_colaborativo/index.html
+++ b/aicolearning/trabajo_colaborativo/templates/trabajo_colaborativo/index.html
@@ -17,7 +17,7 @@
         <p class="card-text">Mantenimiento de la base de datos características sobre los alumnos que se usarán para realizar agrupamientos</p>
       </div>
       <div class="card-footer">
-        <a href="#" class="card-link">Ver</a>
+        <a href="/modelos_de_alumnos/" class="card-link">Ver</a>
         <a href="#" class="card-link">Importar</a>
       </div>
     </div>
