--- a/aicolearning/trabajo_colaborativo/templates/trabajo_colaborativo/index_generic.html
+++ b/aicolearning/trabajo_colaborativo/templates/trabajo_colaborativo/index_generic.html
@@ -32,7 +32,7 @@
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="/trabajo_colaborativo">Inicio</a>
                   <a class="nav-link" href="/centro_de_estudios/">Alumnos</a>
-                  <a class="nav-link" href="#">Modelos</a>
+                  <a class="nav-link" href="/modelos_de_alumnos/">Modelos</a>
                   <a class="nav-link" href="#">Grupos</a>
                   <a class="nav-link" href="#">Encuestas</a>
                   <a class="nav-link" href="#">Nuevo agrupamiento</a>
