Link al formulario de importacion de modelos ok

--- a/aicolearning/modelos_de_alumnos/templates/modelos_de_alumnos/importar_modelo.html
+++ b/aicolearning/modelos_de_alumnos/templates/modelos_de_alumnos/importar_modelo.html
@@ -1,16 +1,24 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Importar Modelo</title>
-    <!-- Incluir los estilos de Bootstrap -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
-</head>
-<body>
+{% extends "trabajo_colaborativo/index_generic.html" %}
+
+{% block title %}
+- Importar Modelo
+{% endblock %}
+
+{% block header %}
+{% endblock %}
+
+{% block content %}
+
+<div class="container">
+    <h1>Importar Modelo</h1>
+    
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Importar</button>
+        <button type="submit" class="btn btn-primary">Importar</button>
+
       </form>
-      
-</body>
-</html>
+</div>
+{% endblock %}
+<!DOCTYPE html>
+
