--- a/aicolearning/modelos_de_alumnos/templates/modelos_de_alumnos/modelos.html
+++ b/aicolearning/modelos_de_alumnos/templates/modelos_de_alumnos/modelos.html
@@ -9,8 +9,8 @@
 <div class="container">
     <h1>Gestión de modelos</h1>
     <p>
-        <button type="button" class="btn btn-light">Crear nuevo</button>
-        <button type="button" class="btn btn-light">Importar</button>
+        <span class="badge text-bg-light"><a href="">Nuevo</a></span>
+        <span class="badge text-bg-light"><a href="/modelos_de_alumnos/importar">Importar</a></span>
     </p>
     {% if lista_modelos %}
         <table class="table table-striped">
