--- a/aicolearning/trabajo_colaborativo/templates/trabajo_colaborativo/index.html
+++ b/aicolearning/trabajo_colaborativo/templates/trabajo_colaborativo/index.html
@@ -18,7 +18,7 @@
       </div>
       <div class="card-footer">
         <a href="/modelos_de_alumnos/" class="card-link">Ver</a>
-        <a href="#" class="card-link">Importar</a>
+        <a href="/modelos_de_alumnos/importar" class="card-link">Importar</a>
       </div>
     </div>
     <div class="card" style="width: 18rem;">
