Vista de Agrupamientos ok

--- a/aicolearning/trabajo_colaborativo/templates/trabajo_colaborativo/index.html
+++ b/aicolearning/trabajo_colaborativo/templates/trabajo_colaborativo/index.html
@@ -28,7 +28,7 @@
         <p class="card-text">Consulta de agrupamientos almacenados en el sistema</p>
       </div>
       <div class="card-footer">
-        <a href="#" class="card-link">Ver</a>
+        <a href="/trabajo_colaborativo/agrupamientos" class="card-link">Ver</a>
         <a href="#" class="card-link">Nuevo</a>
       </div>
     </div>
