--- a/aicolearning/trabajo_colaborativo/templates/trabajo_colaborativo/agrupamientos.html
+++ b/aicolearning/trabajo_colaborativo/templates/trabajo_colaborativo/agrupamientos.html
@@ -1,39 +1,76 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>{{titulo}}</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-</head>
-<body>
+{% extends "trabajo_colaborativo/index_generic.html" %}
+
+{% block title %}
+- Agrupamientos
+{% endblock %}
+
+{% block content %}
 
 <div class="container">
-  <h1>{{titulo}}</h1>
-  {% if agrupamientos %}
-    <table class="table">
-      <thead>
-        <tr>
-          <th>Nombre</th>
-          <th>Definición de modelo</th>
-          <th>Número de equipos</th>
-          <th>Alumnos</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for registro in agrupamientos %}
-          <tr>
-            <td><a href="{{registro.url_agrupamiento}}">{{ registro.etiqueta }}</a></td>
-            <td>{{ registro.modelo.nombre }}</td>
-            <td>{{ registro.num_equipos }}</td>
-            <td>{{ registro.num_alumnos }}</td>
-          </tr>
-        {% endfor %}
-      </tbody>
-    </table>
-  {% else %}
-    <p>No hay registros disponibles.</p>
-  {% endif %}
+    <h1>Agrupamientos generados</h1>
+    <p>
+        <span class="badge text-bg-light"><a href="">Nuevo</a></span>
+    </p>
+    {% if agrupamientos %}
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                  <th>Agrupamiento</th>
+                  <th>Modelo asociado</th>
+                  <th>Equipos</th>
+                  <th>Alumnos</th>
+                  <th>Acciones</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for registro in agrupamientos %}
+                <tr>
+                  <td>{{ registro.etiqueta }}</td>
+                  <td>
+                      {{ registro.modelo.nombre }}
+                      <span class="badge text-bg-light"><a class="link-underline-light link-body-emphasis" href="/modelos_de_alumnos/{{ registro.modelo.id }}">Ver</a></span>  
+                  </td>
+                  <td>{{ registro.num_equipos }}</td>
+                  <td>{{ registro.num_alumnos }}</td>
+                  <td>
+                    <span class="badge text-bg-light"><a class="link-underline-light link-body-emphasis" href="{{registro.url_agrupamiento}}">Consultar</a></span>  
+                    <span class="badge text-bg-light"><a class="link-underline-light link-body-emphasis" href="">Modificar</a></span>
+                      <span class="badge text-bg-danger">Eliminar</span>
+                  </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        <nav aria-label="Page navigation">
+            <ul class="pagination">
+            {% if page_obj.has_previous %}
+                <li class="page-item">
+                <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Anterior</a>
+                </li>
+            {% endif %}
+            {% for num in page_obj.paginator.page_range %}
+                {% if num == page_obj.number %}
+                <li class="page-item active">
+                    <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+                </li>
+                {% else %}
+                <li class="page-item">
+                    <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+                </li>
+                {% endif %}
+            {% endfor %}
+            {% if page_obj.has_next %}
+                <li class="page-item">
+                <a class="page-link" href="?page={{ page_obj.next_page_number }}">Siguiente</a>
+                </li>
+            {% endif %}
+            </ul>
+        </nav>
+    {% else %}
+        <p>No hay registros disponibles</p>
+    {% endif %}
 </div>
 
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
-</html>
+{% endblock %}
+
+
