Añadida opción eliminar agrupamiento en vista de agrupamientos

--- a/aicolearning/trabajo_colaborativo/templates/trabajo_colaborativo/agrupamientos.html
+++ b/aicolearning/trabajo_colaborativo/templates/trabajo_colaborativo/agrupamientos.html
@@ -37,7 +37,7 @@
                     <td>
                         <span class="badge text-bg-light"><a class="link-underline-light link-body-emphasis" href="{{registro.url_agrupamiento}}">Consultar</a></span>  
                         <span class="badge text-bg-light"><a class="link-underline-light link-body-emphasis" href="">Modificar</a></span>
-                        <span class="badge text-bg-danger">Eliminar</span>
+                        <span class="badge text-bg-danger"><a class="link-light" href="/trabajo_colaborativo/eliminar_agrupamiento/{{ registro.id }}">Eliminar</a></span>
                     </td>
                 </tr>
                 {% endfor %}
