--- a/aicolearning/modelos_de_alumnos/templates/modelos_de_alumnos/modelo.html
+++ b/aicolearning/modelos_de_alumnos/templates/modelos_de_alumnos/modelo.html
@@ -54,9 +54,11 @@
                     <a class="page-link" href="?page={{ num }}">{{ num }}</a>
                 </li>
                 {% else %}
-                <li class="page-item">
-                    <a class="page-link" href="?page={{ num }}">{{ num }}</a>
-                </li>
+                    {% if num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
+                        <li class="page-item">
+                            <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+                        </li>
+                    {% endif %}
                 {% endif %}
             {% endfor %}
             {% if page_obj.has_next %}
